ci: add TurboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env: 
+          TURBO_TOKEN: pfVOl0wxwSsr65chOBztZjeh
+          TURBO_TEAM: lucas-tellos-projects
 
       - name: Deploy Storybook
         working-directory: ./packages/docs
