--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@tello-ui/docs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,10 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@tello-ui/eslint-config": "*",
+    "@tello-ui/react": "*",
+    "@tello-ui/tokens": "*",
+    "@tello-ui/ts-config": "*",
     "@storybook/addon-a11y": "^8.0.10",
     "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
